--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10818,6 +10818,32 @@ a.text-dark:hover, a.text-dark:focus {
   }
 }
 
+@media (min-width: 1024px) {
+  .container_editor {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container_editor {
+    -webkit-box-flex: 0;
+        -ms-flex: 0;
+            flex: 0;
+    display: none;
+  }
+}
+
 body {
   background-color: #1a1b1e;
   font-family: "JetBrainsMono";
@@ -10844,19 +10870,23 @@ body {
   font-weight: 800;
   color: #ffffff;
   text-transform: uppercase;
-  font-size: calc(2vw + 2vh);
+  font-size: calc(2.6vw + 2.6vh);
+}
+
+.material-icons {
+  color: white;
 }
 
 #horizontal_navbar {
-  height: 10vh;
+  height: calc(6vh + 2vw);
 }
 
 .navbar-brand {
-  font-size: 3.33333vh;
+  font-size: calc(6vh + 2vw)/3;
 }
 
 #brand_image {
-  height: 10vh;
+  height: calc(6vh + 2vw);
   width: auto;
 }
 
@@ -10876,6 +10906,12 @@ body::-webkit-scrollbar-thumb {
   background: #bbbbbb;
 }
 
+.home-content__headline {
+  font-weight: 600;
+  color: #ffffff;
+  font-size: calc(4vw + 4vh);
+}
+
 #home {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -10889,121 +10925,7 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-pack: stretch;
       -ms-flex-pack: stretch;
           justify-content: stretch;
-  margin-top: 10vh;
-}
-
-@media (min-width: 1024px) {
-  .container_editor {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .card_editor {
-    width: 35vw;
-    height: 20vw;
-    margin-right: 2vw;
-  }
-  .nav__list {
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    list-style-type: none;
-  }
-  .nav__list-item {
-    margin: calc(2vw + 10px);
-    font-size: calc(2vw + 10px);
-  }
-}
-
-@media (max-width: 1024px) and (orientation: landscape) {
-  .nav__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    list-style-type: none;
-  }
-  .nav__list-item {
-    margin: calc(2vw + 10px);
-    font-size: calc(2vw + 10px);
-  }
-}
-
-@media (max-width: 1024px) and (orientation: portrait) {
-  .nav__list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    list-style-type: none;
-  }
-  .nav__list-item {
-    margin: calc(2vw + 10px);
-    font-size: calc(4vw + 10px);
-  }
-}
-
-@media (max-width: 1024px) {
-  .container_editor {
-    -webkit-box-flex: 0;
-        -ms-flex: 0;
-            flex: 0;
-    display: none;
-  }
-  .card_editor {
-    width: 75vw;
-    height: 65vw;
-    margin-left: 5vw;
-    margin-bottom: 2vw;
-    margin-right: 2vw;
-  }
-}
-
-@media (max-width: 1024px) {
-  .menu-icon {
-    display: block !important;
-  }
-  #horizontal_nav_menu {
-    display: none;
-  }
-}
-
-.home-content__headline {
-  font-weight: 600;
-  color: #ffffff;
-  font-size: calc(4vw + 4vh);
-}
-
-#home {
+  margin-top: calc(6vh + 2vw);
   -ms-flex-line-pack: center;
       align-content: center;
   height: 90vmin;
@@ -11051,12 +10973,15 @@ body::-webkit-scrollbar-thumb {
           flex-direction: row;
 }
 
-#download_resume_button {
-  padding-left: calc(1vw + 1vh);
-  padding-right: calc(1vw + 1vh);
-  padding-top: calc(0.5vw + 0.5vh);
-  padding-bottom: calc(0.5vw + 0.5vh);
-  font-size: calc(0.6vw + 0.6vh);
+.download_resume_button {
+  margin-top: 2vmin;
+  padding-left: 3vmax;
+  padding-right: 3vmax;
+  padding-top: 2vmin;
+  padding-bottom: 2vmin;
+  font-size: calc(0.8vw + 0.8vh);
+  -webkit-box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
+          box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11067,26 +10992,48 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 100;
+  font-weight: 500;
+  color: white;
   background: #1089ff;
+  border-radius: 0.8vmin;
+  border: none;
   width: auto;
   height: auto;
+  -webkit-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+}
+
+.download_resume_button:hover,
+.download_resume_button:focus {
+  -webkit-box-shadow: 0 6px 32px #71F9A8;
+          box-shadow: 0 6px 32px #71F9A8;
+  background: #71F9A8;
+  color: black;
 }
 
 .card_editor {
-  background-color: #2D2E32;
+  width: 35vw;
+  height: 20vw;
+  background: #2D2E32;
   margin: auto;
+  -webkit-box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
+          box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
+  border-collapse: separate;
+  border-radius: 0.8vmin;
 }
 
 .editor_top {
   width: 100%;
   height: 10%;
+  padding-left: 5%;
   background: black;
+  border-top-left-radius: 0.8vmin;
+  border-top-right-radius: 0.8vmin;
 }
 
 .dot {
-  height: calc(0.3vw + 0.3vh);
-  width: calc(0.3vw + 0.3vh);
+  height: calc(0.4vw + 0.4vh);
+  width: calc(0.4vw + 0.4vh);
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -11158,7 +11105,7 @@ body::-webkit-scrollbar-thumb {
 .year_of_experience {
   margin: 0;
   padding: 0;
-  font-size: calc(14vw + 14vh);
+  font-size: calc(36vmin);
   color: #bbbbbb;
   font-weight: 800;
   opacity: 0.1;
@@ -11170,8 +11117,6 @@ body::-webkit-scrollbar-thumb {
 }
 
 .position_div {
-  padding-left: 1vw;
-  padding-right: 1vw;
   margin-bottom: 2.5vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11275,191 +11220,45 @@ body::-webkit-scrollbar-thumb {
   margin: 0;
   padding: 0;
   color: white;
+  font-size: calc(1.2vw + 1.2vh);
 }
 
-.menu-icon {
-  height: auto;
-  width: 30px;
-  margin: 0;
-  padding: 0;
-  display: none;
-  position: fixed;
-  z-index: 2;
-  right: 10vw;
-  cursor: pointer;
+.navbar-toggler {
+  z-index: 10;
 }
 
-.menu-icon__line {
-  height: 2px;
-  width: 30px;
-  display: block;
-  background-color: #ffffff;
-  margin-bottom: 4px;
-  -webkit-transition: background-color .5s ease, -webkit-transform .2s ease;
-  transition: background-color .5s ease, -webkit-transform .2s ease;
-  transition: transform .2s ease, background-color .5s ease;
-  transition: transform .2s ease, background-color .5s ease, -webkit-transform .2s ease;
-}
-
-.menu-icon__line-left {
-  width: 15px;
-}
-
-.menu-icon__line-right {
-  width: 15px;
-  float: right;
-}
-
-.nav {
-  position: fixed;
-  z-index: 1;
-  padding: 0;
-  margin: 0;
-}
-
-.nav:before, .nav:after {
-  content: "";
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(234, 234, 234, 0.2);
-  z-index: -1;
-  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
-  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
-  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
-  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
-  -webkit-transform: translateX(0%) translateY(-100%);
-          transform: translateX(0%) translateY(-100%);
-}
-
-.nav:after {
-  background: #1089ff;
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
-}
-
-.nav:before {
-  -webkit-transition-delay: .1s;
-          transition-delay: .1s;
-}
-
-.nav__content {
-  position: fixed;
-  top: 50%;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-  width: 100%;
-  text-align: center;
-  font-size: calc(2vw + 10px);
-  font-weight: 200;
-  cursor: pointer;
-}
-
-.nav__list-item {
-  position: relative;
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
-  opacity: 0;
-  color: #ffffff;
-  -webkit-transform: translate(0%, 100%);
-          transform: translate(0%, 100%);
-  -webkit-transition: opacity .2s ease, -webkit-transform .3s ease;
-  transition: opacity .2s ease, -webkit-transform .3s ease;
-  transition: opacity .2s ease, transform .3s ease;
-  transition: opacity .2s ease, transform .3s ease, -webkit-transform .3s ease;
-  margin-right: 25px;
-}
-
-.nav__list-item:before {
-  content: "";
-  position: absolute;
-  background: #ffffff;
-  width: calc(0.5vw + 20px);
-  height: calc(0.2vw + 2px);
-  top: 100%;
-  -webkit-transform: translate(0%, 0%);
-          transform: translate(0%, 0%);
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
-  z-index: -1;
-}
-
-.nav__list-item:hover:before {
-  width: 100%;
-}
-
-body.nav-active .menu-icon__line {
-  background-color: white;
-  -webkit-transform: translateX(0px) rotate(-45deg);
-          transform: translateX(0px) rotate(-45deg);
-}
-
-body.nav-active .menu-icon__line-left {
-  -webkit-transform: translateX(1px) rotate(45deg);
-          transform: translateX(1px) rotate(45deg);
-}
-
-body.nav-active .menu-icon__line-right {
-  -webkit-transform: translateX(-2px) rotate(45deg);
-          transform: translateX(-2px) rotate(45deg);
-}
-
-body.nav-active .nav {
-  visibility: visible;
-}
-
-body.nav-active .nav:before, body.nav-active .nav:after {
-  -webkit-transform: translateX(0%) translateY(0%);
-          transform: translateX(0%) translateY(0%);
-}
-
-body.nav-active .nav:after {
-  -webkit-transition-delay: .1s;
-          transition-delay: .1s;
-}
-
-body.nav-active .nav:before {
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
-}
-
-body.nav-active .nav__list-item {
-  opacity: 1;
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
-  -webkit-transition: opacity .3s ease, color .3s ease, -webkit-transform .3s ease;
-  transition: opacity .3s ease, color .3s ease, -webkit-transform .3s ease;
-  transition: opacity .3s ease, transform .3s ease, color .3s ease;
-  transition: opacity .3s ease, transform .3s ease, color .3s ease, -webkit-transform .3s ease;
-}
-
-body.nav-active .nav__list-item:nth-child(0) {
-  -webkit-transition-delay: 0.5s;
-          transition-delay: 0.5s;
-}
-
-body.nav-active .nav__list-item:nth-child(1) {
-  -webkit-transition-delay: 0.6s;
-          transition-delay: 0.6s;
-}
-
-body.nav-active .nav__list-item:nth-child(2) {
-  -webkit-transition-delay: 0.7s;
-          transition-delay: 0.7s;
-}
-
-body.nav-active .nav__list-item:nth-child(3) {
-  -webkit-transition-delay: 0.8s;
-          transition-delay: 0.8s;
-}
-
-body.nav-active .nav__list-item:nth-child(4) {
-  -webkit-transition-delay: 0.9s;
-          transition-delay: 0.9s;
-}
-
-body.nav-active .nav__list-item:nth-child(5) {
-  -webkit-transition-delay: 1s;
-          transition-delay: 1s;
+@media (max-width: 992px) {
+  .navbar-collapse {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60vmin;
+    background-color: #2D2E32;
+    padding-right: 8vw;
+    padding-top: 8vh;
+    height: 100%;
+    text-align: right;
+    -webkit-box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
+            box-shadow: 0 6px 32px rgba(0, 0, 0, 0.55);
+  }
+  .nav-item {
+    font-size: calc(1.4vw + 1.4vh);
+  }
+  .navbar-collapse.collapsing {
+    height: 100%;
+    right: -75%;
+    -webkit-transition: height 0s ease;
+    transition: height 0s ease;
+  }
+  .navbar-collapse.show {
+    height: 100%;
+    right: 0;
+    -webkit-transition: right 400ms ease-in-out;
+    transition: right 400ms ease-in-out;
+  }
+  .navbar-toggler.collapsed ~ .navbar-collapse {
+    -webkit-transition: right 400ms ease-in;
+    transition: right 400ms ease-in;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
